# Todo_List

./: .env.example  .env.example.  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 73c4ca099514_create_project_and_task_tables.py
src/CLI/: commands.py  parser.py
src/Storage/: Simple_Storage.py
src/Task/: Task.py
src/api/: routers.py  users_router.py
src/api/controller_schemas/requests/: users_request_schema.py
src/api/controller_schemas/responses/: project_response_schema.py  task_response_schema.py  users_response_schema.py
src/api/controllers/: users_controller.py
src/commands/: autoclose_overdue.py
src/db/: base.py  session.py
src/exceptions/: service_exceptions.py
src/models/: __init__.py  project.py  task.py  user.py
src/project/: project.py
src/repositories/: base_reposetory.py  base_repository.py  project_repository.py  task_repository.py  user_repository.py
src/services/: auth_service.py  project_service.py  task_service.py  user_service.py
