[project]
name = "TodoList"
version = "0.1.0"
description = "A Minimal CLI Todo"
authors = [
    {name = "Mohammad hadi Niknam", email = "niknam@aut.ac.ir"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [
            {include = "project", from = "src"},
            {include = "Task" , from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.black]
line-length = 88
target-version = ["py313"]  # set to your Python version, e.g. py39, py310, py311

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
